package model;

public enum TipoFuncionario {

	ADMINISTRADOR, GERENTE, OPERACIONAL;

}
